--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       SiHitamList
     </div>
     <nav>
-      <ul>
-        <li>Anime</li>
-        <li>Manga</li>
-        <li>Community</li>
-        <li>Bookmarks</li>
-      </ul>
-    </nav>
+  <ul>
+    <li class="nav-item" data-section="anime">Anime</li>
+    <li class="nav-item" data-section="manga">Manga</li>
+    <li class="nav-item" data-section="community">Community</li>
+    <li class="nav-item" data-section="bookmarks">Bookmarks</li>
+  </ul>
+</nav>
   </header>
 
   <div class="search-bar">
